[tool.poetry]
name = "radix_string"
version = "0.1.0"
description = "Function for python to convert integer to any base"
authors = ["Anton Kudryavtsev <antonkudryavtsevdoem@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
